--- a/src/App.css
+++ b/src/App.css
@@ -137,7 +137,45 @@
     margin-top: -88rem;
   }
 }
-@media (max-width:1024px){
+
+@media (min-width: 431px) and (max-width: 821px){
+  .ql-toolbar{
+    width: 46rem; 
+    position: sticky;
+    z-index: 1;
+    margin-top: 49rem;
+    margin-left: -10rem;
+  }
+  .quill_box.ql-container.ql-snow{
+    margin-left: -10rem;
+    width: 46rem;
+    min-height: 41rem;
+  }
+  .icons{
+    margin-left: 60%;
+  }
+}
+
+@media (min-width: 822px) and (max-width: 1024px) {
+  /* Styles for viewports between 820px and 1023px wide */
+  .ql-toolbar {
+    width: 58rem; 
+    position: sticky;
+    z-index: 1;
+    margin-top: 49rem;
+    margin-left: -11.7rem;
+  }
+  .quill_box.ql-container.ql-snow {
+    margin-left: -11.7rem;
+    width: 58rem;
+    min-height: 41rem;
+  }
+  .icons {
+    margin-left: 60%;
+  }
+  /* Additional styles for this range */
+}
+@media (min-width: 1025px){
   .ql-toolbar{
     width: 64rem; 
     position: sticky;
@@ -159,21 +197,8 @@
   .note_pad_div{
     margin-top: -85rem;
   }
-}
-@media (max-width:820px){
-  .ql-toolbar{
-    width: 51rem; 
-    position: sticky;
-    z-index: 1;
-    margin-top: 49rem;
-    margin-left: -11.7rem;
-  }
-  .quill_box.ql-container.ql-snow{
-    margin-left: -11.7rem;
-    width: 51rem;
-    min-height: 41rem;
-  }
-  .icons{
-    margin-left: 60%;
+  .pad_quill{
+    margin-left: 45.3%;
+    margin-top: -98rem;
   }
 }
