--- a/src/App.css
+++ b/src/App.css
@@ -74,15 +74,27 @@
 }
 .notes_render_div{
   width: 100%;
-  height: 35rem;
-  overflow-y: scroll;
+  height: 45rem;
 }
 .serch_box{
   padding: 1.4rem;
 }
+.note_div{
+background-color: aqua;
+overflow-y: scroll;
+}
 .Notes{
   width: 98%;
   height: 5rem;
+  margin-left: 0.5%;
+  margin-bottom: 0.2rem;
+  border-radius: 0.5rem;
+  border-width: 0.1rem;
+}
+.Tables{
+  width: 96%;
+  height: 5rem;
+  margin-top: 0.2rem;
   margin-left: 0.5%;
   margin-bottom: 0.2rem;
   border-radius: 0.5rem;
@@ -104,6 +116,12 @@
 }
 .btn_tb{
   margin-left: 1rem;
+}
+.table_div{
+  background-color: brown;
+  overflow-y: scroll;
+  width: 37rem;
+  height: 20rem;
 }
 
 
