--- a/src/App.css
+++ b/src/App.css
@@ -150,16 +150,29 @@ height: 20rem;
   }
   .notes_div{
     width: 100%;
+    overflow-y: scroll;
   }
   .notes_render_div{
     width: 100%;
-    height: 40rem;
+    height: 30rem;
   }
   .serch_box{
     padding: 1.4rem;
   }
   .icons{
     margin-left: 17%;
+  }
+  .table_div{
+    margin-top: 1rem;
+    overflow-y: scroll;
+    width: 100%;
+    height: 22rem;
+  }
+  .t_head{
+    width: 18.5rem;
+  }
+  .footer{
+    margin-top: 8rem;
   }
 
 }
@@ -189,7 +202,7 @@ height: 20rem;
   .table_div{
     margin-top: 1rem;
     overflow-y: scroll;
-    width: 19.5rem;
+    width: 21rem;
     height: 35rem;
   }
   .note_div{
@@ -198,6 +211,9 @@ height: 20rem;
   }
   .t_head{
     width: 18.5rem;
+  }
+  .Tables{
+    width: 100%;
   }
 }
 
