table page responsiveness

--- a/src/App.css
+++ b/src/App.css
@@ -174,6 +174,10 @@ height: 20rem;
   .footer{
     margin-top: 8rem;
   }
+  .iframe{
+    width:100%;
+    height:52.8rem;
+  }
 
 }
 
@@ -202,7 +206,7 @@ height: 20rem;
   .table_div{
     margin-top: 1rem;
     overflow-y: scroll;
-    width: 21rem;
+    width: 20.5rem;
     height: 35rem;
   }
   .note_div{
@@ -213,8 +217,13 @@ height: 20rem;
     width: 18.5rem;
   }
   .Tables{
-    width: 100%;
+    width: 20rem;
   }
+  .iframe{
+    width:100%;
+    height:74rem;
+  }
+
 }
 
 @media (min-width: 822px) and (max-width: 1024px) {
@@ -253,6 +262,13 @@ height: 20rem;
   .t_head{
     width: 25rem;
   }
+  .Tables{
+    width: 25rem;
+  }
+  .iframe{
+    width:100%;
+    height:85rem;
+  }
   /* Additional styles for this range */
 }
 @media (min-width: 1025px){
@@ -280,6 +296,10 @@ height: 20rem;
   .pad_quill{
     margin-left: 45.3%;
     margin-top: -98rem;
+  }
+  .iframe{
+    width:100%;
+    height:49rem;
   }
 
   
